# convert2qgis

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: continuous_integration.yml
samples/: sample.json
src/convert2qgis/: __init__.py  errors.py
src/convert2qgis/json2qgis/: cli.py  errors.py  generate.py  json2qgis.py  qgis_utils.py  type_defs.py  utils.py
src/convert2qgis/json2qgis/schema/: schema_20251121.json
src/convert2qgis/xlsform2qgis/: cli.py  converter.py  converter_utils.py  errors.py  qgis_utils.py  sheet_parser.py  type_defs.py  widgets.py  xlsform2qgis.py
src/convert2qgis/xlsform2qgis/expressions/: errors.py  expression.py  functions.py  parser.py  tokenizer.py  type_defs.py
src/json2qgis/: cli.py  generate.py  json2qgis.py  type_defs.py  types.py  utils.py
src/json2qgis/schema/: schema_20251121.json
tests/: test_json2qgis.py  test_utils.py
tests/json2qgis/: test_json2qgis.py  test_samples.py  test_type_defs.py  test_utils.py
tests/xlsform2qgis/: test_converter_utils.py  test_parsed_sheet.py  test_xlsforms.py
tests/xlsform2qgis/data/: missing_choices.xlsx
tests/xlsform2qgis/expressions/: test_expression.py  test_parser.py  test_registry.py  test_tokenizer.py
