[project]
name = "convert2qgis"
version = "0.1.0"
description = ""
authors = [
    {name = "Mathieu Pelerin",email = "mathieu@opengis.ch"},
    {name = "Ivan Ivanov",email = "ivan@opengis.ch"},
    {name = "Rakan Farhouda",email = "rakan@opengis.ch"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = []

[project.optional-dependencies]
optional = [
    "unidecode >=1.0.0",
    "fastjsonschema (>=2.21.2,<3.0.0)",
    "markdown>=3.10",
]

[tool.pyright]

[tool.ruff]
line-length = 120

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov>=7.0.0",
    "ruff (>=0.15.5,<0.16.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "debugpy (>=1.8.20,<2.0.0)",
]

[project.scripts]
json2qgis = "convert2qgis.json2qgis.cli:main"
xlsform2qgis = "convert2qgis.xlsform2qgis.converter:main_cli"


[tool.coverage.report]
exclude_also = [
    'raise NotImplementedError',
    'raise AssertionError',
]
