[project]
name = "convert2qgis"
version = "0.1.0"
description = ""
authors = [
    {name = "Mathieu Pelerin",email = "mathieu@opengis.ch"},
    {name = "Ivan Ivanov",email = "ivan@opengis.ch"},
    {name = "Rakan Farhouda",email = "rakan@opengis.ch"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = []

[project.optional-dependencies]
optional = [
    "unidecode >=1.0.0",
    "fastjsonschema (>=2.21.2,<3.0.0)",
    "markdown>=3.10",
]

[tool.pyright]

[tool.ruff]
line-length = 120
lint.select = [
    "E",  # All errors
    "F",  # All pyflakes checks
    "W",  # All warnings
    "C90",  # Complexity checks
    "B",  # Bugbear checks
    "I",  # Import checks (isort)
]
lint.ignore = [
    "E501",  # Line too long
]

[tool.mypy]
python_version = "3.12"

strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
no_implicit_reexport = true
show_error_codes = true
pretty = true

# Sensible escape hatches for real-world projects
disallow_subclassing_any = false
disallow_any_generics = true
disallow_untyped_decorators = false

# Usually better handled gradually per-module
ignore_missing_imports = false

# Not enabled yet, since pylance, mypy and ty have very different understanding of what should be ignored
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = [
  "tests",
  "tests.*",
]
# Allow missing return types (and other annotations) in tests
disallow_untyped_defs = false
disallow_incomplete_defs = false
# Still type-check inside test bodies
check_untyped_defs = true

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov>=7.0.0",
    "ruff (>=0.15.5,<0.16.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "debugpy (>=1.8.20,<2.0.0)",
]

[project.scripts]
json2qgis = "convert2qgis.json2qgis.cli:main"
xlsform2qgis = "convert2qgis.xlsform2qgis.cli:main"


[tool.coverage.report]
exclude_also = [
    'raise NotImplementedError',
    'raise AssertionError',
]
